# gimp-remake

./: .clang-format  .clang-tidy  .gitignore  CAHIERDESCHARGES.tex  CMakeLists.txt  Doxyfile  README.md  license.md  vcpkg.json
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
core/: command.h  command_bus.cpp  command_bus.h  document.h  event_bus.h  history_manager.h  image.h  layer.h  layer_stack.cpp  layer_stack.h  tile_store.h
core/commands/: add_layer_command.cpp  add_layer_command.h  fill_color_command.cpp  fill_color_command.h
docs/: COMMIT_MESSAGE_FORMAT_GUIDE  ERROR_HANDLING_ARCHITECTURE.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_QUICK_REFERENCE.md  GITHUB_ISSUE_FORMAT_GUIDE.md
docs/api/html/: add__layer__command_8cpp.html  add__layer__command_8cpp__incl.dot  add__layer__command_8cpp_source.html  add__layer__command_8h.html  add__layer__command_8h.js  add__layer__command_8h__dep__incl.dot  add__layer__command_8h__incl.dot  add__layer__command_8h_source.html  annotated.html  annotated_dup.js  classes.html  classgimp_1_1AddLayerCommand-members.html  classgimp_1_1AddLayerCommand.html  classgimp_1_1AddLayerCommand.js  classgimp_1_1AddLayerCommand__inherit__graph.dot  classgimp_1_1BasicCommandBus-members.html  classgimp_1_1BasicCommandBus.html  classgimp_1_1BasicCommandBus.js  classgimp_1_1BasicCommandBus__inherit__graph.dot  classgimp_1_1Command-members.html  classgimp_1_1Command.html  classgimp_1_1Command.js  classgimp_1_1CommandBus-members.html  classgimp_1_1CommandBus.html  classgimp_1_1CommandBus.js  classgimp_1_1CommandBus__inherit__graph.dot  classgimp_1_1CommandPalette-members.html  classgimp_1_1CommandPalette.html  classgimp_1_1CommandPalette__inherit__graph.dot  classgimp_1_1Command__inherit__graph.dot  classgimp_1_1DebugHud-members.html  classgimp_1_1DebugHud.html  classgimp_1_1DebugHud__coll__graph.dot  classgimp_1_1Document-members.html  classgimp_1_1Document.html  classgimp_1_1Document.js  classgimp_1_1Document__inherit__graph.dot  classgimp_1_1EventBus-members.html  classgimp_1_1EventBus.html  classgimp_1_1EventBus.js  (+444 more)
include/core/: brush_dynamics.h  brush_strategy.cpp  brush_strategy.h  clipboard_manager.h  command.h  command_bus.cpp  command_bus.h  document.h  event_bus.h  events.h  floating_buffer.h  history_manager.h  layer.h  layer_stack.cpp  layer_stack.h  selection_manager.h  tile_store.h  tool.h  tool_factory.cpp  tool_factory.h  tool_options.h  tool_registry.h  transform_state.h
include/core/commands/: add_layer_command.cpp  add_layer_command.h  crop_command.h  draw_command.h  fill_color_command.cpp  fill_color_command.h  move_command.h  paste_command.h  resize_command.h  selection_command.h
include/core/filters/: blur_filter.h  filter.h  sharpen_filter.h
include/core/tools/: brush_tool.h  color_picker_tool.h  ellipse_selection_tool.h  eraser_tool.h  fill_tool.h  free_select_tool.h  gradient_tool.h  move_tool.cpp  move_tool.h  pencil_tool.h  rect_selection_tool.h  selection_tool_base.h
include/error_handling/: error_codes.h  error_handler.h  error_result.h  exceptions.h
include/history/: history_stack.h  simple_history_manager.h
include/io/: binary_project_reader.h  binary_project_writer.h  image_file.h  io_manager.h  project_file.h  utility.h
include/render/: gpu_context.h  renderer.h  skia_compositor.cpp  skia_compositor.h  skia_renderer.cpp  skia_renderer.h
include/ui/: canvas_resize_dialog.h  color_chooser_panel.h  command_palette.h  debug_hud.h  history_panel.h  layers_panel.h  log_bridge.h  log_message.h  log_panel.h  log_sink.h  main_window.h  new_document_dialog.h  recent_files_manager.h  shortcut_manager.h  skia_canvas_widget.h  spin_slider.h  theme.h  toast_constants.h  toast_manager.h  toast_notification.h  tool_button.h  tool_options_bar.h  tool_options_panel.h  toolbox_panel.h
io/: io_interface.h  io_manager.h  opencv_image.cpp  opencv_image.h
render/: renderer.h  skia_compositor.cpp  skia_compositor.h  skia_renderer.cpp  skia_renderer.h
resources/: resources.qrc
resources/presets/: fine-pencil.json
resources/schemas/: tool-preset.schema.json
scripts/: build.ps1  run-format.ps1  run-lint.ps1  run-tests.ps1  run.ps1
src/: main.cpp
src/core/: brush_strategy.cpp  clipboard_manager.cpp  command_bus.cpp  floating_buffer.cpp  layer_stack.cpp  tool.cpp  tool_factory.cpp  transform_state.cpp
src/core/commands/: add_layer_command.cpp  crop_command copy.cpp  crop_command.cpp  draw_command.cpp  fill_color_command.cpp  move_command.cpp  paste_command.cpp  resize_command.cpp  selection_command.cpp
src/core/filters/: blur_filter.cpp  filter.cpp  sharpen_filter.cpp
src/core/tools/: brush_tool.cpp  (+10 more)
src/error_handling/: error_handler.cpp
src/history/: history_stack.cpp  simple_history_manager.cpp
src/io/: binary_project_reader.cpp  binary_project_writer.cpp  io_manager.cpp
src/render/: gpu_context.cpp  skia_compositor.cpp  skia_renderer.cpp
src/ui/: canvas_resize_dialog.cpp  color_chooser_panel.cpp  command_palette.cpp  debug_hud.cpp  history_panel.cpp  layers_panel.cpp  log_bridge.cpp  log_message.cpp  log_panel.cpp  log_sink.cpp  main_window.cpp  new_document_dialog.cpp  recent_files_manager.cpp  shortcut_manager.cpp  skia_canvas_widget.cpp  spin_slider.cpp  toast_manager.cpp  toast_notification.cpp  tool_button.cpp  tool_options_bar.cpp  tool_options_panel.cpp  toolbox_panel.cpp
tests/: test_canvas_viewport.cpp  test_compositor.cpp  test_draw_command.cpp  test_io_manager.cpp  test_tool_state_machine.cpp
tests/integration/: test_compositor.cpp  test_io_manager.cpp
tests/unit/: test_brush_tool.cpp  test_canvas_viewport.cpp  test_clipboard_manager.cpp  test_color_chooser_panel.cpp  test_color_picker_tool.cpp  test_draw_command.cpp  test_eraser_tool.cpp  test_event_bus.cpp  test_fill_tool.cpp  test_free_select_tool.cpp  test_gradient_tool.cpp  test_history_stack.cpp  test_layer_stack.cpp  test_move_command.cpp  test_pencil_tool.cpp  test_selection_command.cpp  test_shortcut_manager.cpp  test_tool_state_machine.cpp  test_transform_state.cpp
ui/: main_window.h  skia_canvas_widget.h
(+121 files in other folders)
